added explore page/removed search

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -26,6 +26,9 @@
             <a class="nav-link" href="/commodities">Commodities</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/explore">Explore</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/cart">Cart</a>
           </li>
         </ul>
