--- a/app/templates/commodities.html
+++ b/app/templates/commodities.html
@@ -26,6 +26,9 @@
             <a class="nav-link" href="/commodities">Commodities</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/explore">Explore</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/cart">Cart</a>
           </li>
         </ul>
@@ -40,13 +43,6 @@
           
           <h1><strong>Commodities</strong></h1>
           <p class="text-muted">Discover the current market values of a variety of Commodities.</p>
-
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Research database for..." aria-label="Text input with segmented dropdown button">
-            <div class="input-group-append">
-              <button type="button" class="btn btn-outline-info">Search</button>
-            </div>
-          </div>
 
           <br />
           <small>Click on a result to view a timeline of its value:</small>
