--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -41,11 +41,11 @@
         <div class="col-md-8">
           <br /><br />
           
-          <h1><strong>Stocks</strong></h1>
-          <p class="text-muted">Discover the current market values of a variety of Stocks.</p>
+          <h1><strong>Explore</strong></h1>
+          <p class="text-muted">Explore different investments and learn about their performance.</p>
 
           <br />
-          <small>Click on a result to view the listing: </small>
+          <small>Click on an item to learn more about it. </small>
           <ul style="margin-top: 10px;" class="list-group">
             <a style="margin-top: 3px" href="/item?kind=stocks&name=SP"><li class="list-group-item"> S&P 500 (INX) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
             <a style="margin-top: 3px" href="/item?kind=stocks&name=NASDAQ"><li class="list-group-item"> Nasdaq (IXIC) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
@@ -65,6 +65,13 @@
             <a style="margin-top: 3px" href="/item?kind=stocks&name=IBM"><li class="list-group-item"> IBM (IBM) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
             <a style="margin-top: 3px" href="/item?kind=stocks&name=CCL"><li class="list-group-item"> Carnival Cruises (CCL) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
             <a style="margin-top: 3px" href="/item?kind=stocks&name=XOM"><li class="list-group-item"> ExxonMobil (XOM) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/item?kind=commodities&name=GOLD"><li class="list-group-item"> Gold <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/item?kind=commodities&name=OIL"><li class="list-group-item"> Oil <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/item?kind=commodities&name=WAGNER"><li class="list-group-item"> T206 Honus Wagner Baseball Card <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/item?kind=commodities&name=VALENTINO"><li class="list-group-item"> Ty Beanie Baby - Valentino the Bear <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/item?kind=commodities&name=ROMEO"><li class="list-group-item"> 1939 Alfa Romeo 8C 2900B Lungo Spider <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/item?kind=commodities&name=MARIO"><li class="list-group-item"> Super Mario 64 - Nintendo 64 <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/item?kind=commodities&name=POKEMON"><li class="list-group-item"> Pokemon FireRed - Game Boy Advance <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
           </ul>
         </div>
         <div class="col-md-2"></div>
