--- a/app/templates/stocks.html
+++ b/app/templates/stocks.html
@@ -55,7 +55,7 @@
             <a style="margin-top: 3px" href="/item?kind=stocks&name=GE"><li class="list-group-item"> General Electric (GE) <span style="margin-left: 15px" class="badge badge-primary">Stocks</span> </li></a>
             <a style="margin-top: 3px" href="/item?kind=stocks&name=PG"><li class="list-group-item"> Procter & Gamble Company (PG) <span style="margin-left: 15px" class="badge badge-primary">Stocks</span> </li></a>
             <a style="margin-top: 3px" href="/item?kind=stocks&name=SHLDQ"><li class="list-group-item"> Sears Holding Group (SHLDQ) <span style="margin-left: 15px" class="badge badge-primary">Stocks</span> </li></a>
-            <a style="margin-top: 3px" href="/item?kind=stocks&name=JCP"><li class="list-group-item"> J.C. Penny (JCP) <span style="margin-left: 15px" class="badge badge-primary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/item?kind=stocks&name=JCP"><li class="list-group-item"> J.C. Penney (JCP) <span style="margin-left: 15px" class="badge badge-primary">Stocks</span> </li></a>
             <a style="margin-top: 3px" href="/item?kind=stocks&name=FMCC"><li class="list-group-item"> Freddie Mac (FMCC) <span style="margin-left: 15px" class="badge badge-primary">Stocks</span> </li></a>
             <a style="margin-top: 3px" href="/item?kind=stocks&name=BB"><li class="list-group-item"> Blackberry (BB) <span style="margin-left: 15px" class="badge badge-primary">Stocks</span> </li></a>
             <a style="margin-top: 3px" href="/item?kind=stocks&name=CHK"><li class="list-group-item"> Chesapeake Energy (CHK) <span style="margin-left: 15px" class="badge badge-primary">Stocks</span> </li></a>
