--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -44,7 +44,11 @@
           <h1><strong>Cart</strong></h1>
           <p class="text-muted">The goods you have chosen to save:</p>
           <ul style="margin-top: 10px;" class="list-group">
-            {{ cart_html | safe }}
+            {% if not cart_html %}
+              <small> You do not have anything in your cart. </small>
+            {% else %}
+              {{ cart_html | safe }}
+            {% endif %}
           </ul>
         </div>
         <div class="col-md-2"></div>
