added history for the max and min dates

--- a/app/templates/item.html
+++ b/app/templates/item.html
@@ -106,6 +106,7 @@
               <h5 class="card-title">Maximum Price</h5>
               <h6 class="card-subtitle mb-2 text-muted">{{max_date}}</h6>
               <p class="card-text"><strong>{{max}}</strong></p>
+                <p class="card-text">{{max_history}}</p>
             </div>
           </div>
           <div class="card" style="margin-top: 10px; width: 100%;">
@@ -113,6 +114,7 @@
               <h5 class="card-title">Minimum Price</h5>
               <h6 class="card-subtitle mb-2 text-muted">{{min_date}}</h6>
               <p class="card-text"><strong>{{min}}</strong></p>
+                <p class="card-text">{{min_history}}</p>
             </div>
           </div>
           <br />
