--- a/app/templates/stocks.html
+++ b/app/templates/stocks.html
@@ -58,7 +58,7 @@
             <a style="margin-top: 3px" href="/item?kind=stocks&name=BB"><li class="list-group-item"> Blackberry (BB) <span style="margin-left: 15px" class="badge badge-primary">Stocks</span> </li></a>
             <a style="margin-top: 3px" href="/item?kind=stocks&name=CHK"><li class="list-group-item"> Chesapeake Energy (CHK) <span style="margin-left: 15px" class="badge badge-primary">Stocks</span> </li></a>
             <a style="margin-top: 3px" href="/item?kind=stocks&name=AXL"><li class="list-group-item"> American Axle and Manufacturing (AXL) <span style="margin-left: 15px" class="badge badge-primary">Stocks</span>
-            <a style="margin-top: 3px" href="/item?kind=stocks&name=BRJRI"><li class="list-group-item"> BJ's Restaurants (BJRI) <span style="margin-left: 15px" class="badge badge-primary">Stocks</span> </li></a> </li></a>
+            <a style="margin-top: 3px" href="/item?kind=stocks&name=BJRI"><li class="list-group-item"> BJ's Restaurants (BJRI) <span style="margin-left: 15px" class="badge badge-primary">Stocks</span> </li></a> </li></a>
             <a style="margin-top: 3px" href="/item?kind=stocks&name=GWPH"><li class="list-group-item"> GW Pharmaceuticals (GWPH) <span style="margin-left: 15px" class="badge badge-primary">Stocks</span> </li></a>
             <a style="margin-top: 3px" href="/item?kind=stocks&name=IBM"><li class="list-group-item"> IBM (IBM) <span style="margin-left: 15px" class="badge badge-primary">Stocks</span> </li></a>
             <a style="margin-top: 3px" href="/item?kind=stocks&name=CCL"><li class="list-group-item"> Carnival Cruises (CCL) <span style="margin-left: 15px" class="badge badge-primary">Stocks</span> </li></a>
