--- a/app/templates/splash.html
+++ b/app/templates/splash.html
@@ -46,18 +46,14 @@
     <div class="card-container">
       <div class="card">
         <div class="front">
-          <h2 class="sub-title">Season 1</h2>
+          <h2 class="sub-title">Question 1</h2>
           <h1 class="title">
-            Rick and Morty
+            Which has a better return over time: Beanie Baby Valentino Bear or this item?
           </h1>
-          <img class="image" src="http://pre14.deviantart.net/0aef/th/pre/f/2014/015/2/f/look_at_that_thing_morty____rick_and_morty_by_kory226-d72a6ub.png" alt="" />
       </div>
       <div class="back">
-        <h3 class="synopsis">Synopsis</h3>
-        <p>Rick and Morty is an American adult animated television series created by Justin Roiland and Dan Harmon for Adult Swim. The series follows the misadventures of alcoholic scientist Rick and his easily influenced grandson Morty, who split their time
-          between domestic family life and interdimensional travel.</p>
-        <div class="btn"><i class="fa fa-play"></i>Watch now</div>
-        <div class="btn secondary"><i class="fa fa-heart "></i>Add to list</div>
+        <h3 class="synopsis">Answer</h3>
+        <p>This item has a much higher value!</p>
     </div>
     </div>
     </div>
