--- a/app/templates/item.html
+++ b/app/templates/item.html
@@ -106,7 +106,7 @@
             <div>
             <h2><strong>Buy and Sell</strong></h2>
              <form method="POST">
-                 <input class = "searchbox" style="margin-bottom: 1rem; width: 16rem" type="number" placeholder="Amount" name="quantity"/><br>
+                 <input class = "searchbox" style="margin-bottom: 1rem; width: 16rem" type="number" placeholder="Number of Shares" name="quantity"/><br>
                  <input class = "searchbox" style="margin-bottom: 1rem; width: 16rem" type="number" placeholder="YYYYMMDD" name="pretend_date"/><br>
                  <button class="btn btn-info" name = "action" style="width: 7.8rem" value="Buy;_;{{item_name}}">Buy</button>
                  <button class="btn btn-success" name = "action" style="width: 7.8rem" value="Sell;_;{{item_name}}">Sell</button>
